force-app/main/default/objects/phsHomeSlideShow__c/phsHomeSlideShow__c.object-meta.xml
<CustomObject>
    <description>This object holds images and sequence for slideshow</description>
    <label>phsHomeSlideShow</label>
    <nameField>
        <label>phs Home SlideShow Name</label>
        <type>Text</type>
    </nameField>
    <pluralLabel>phsHomeSlideShows</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>