force-app/main/default/objects/phsHomeSlideShow__c/fields/Desktop_Image__c.field-meta.xml
<CustomField>
    <fullName>Desktop_Image__c</fullName>
    <description>This image will be one of the backgrounds of Desktop slideshow depending on sequence in homepage</description>
    <inlineHelpText>This image will be one of the backgrounds of Desktop slideshow depending on sequence in homepage</inlineHelpText>
    <label>Desktop Image</label>
    <length>32768</length>
    <type>Html</type>
</CustomField>