force-app/main/default/objects/phsHomeSlideShow__c/fields/Image_Sequence__c.field-meta.xml
<CustomField>
    <fullName>Image_Sequence__c</fullName>
    <description>This field holds sequence of images to be displayed in slideshow</description>
    <inlineHelpText>Select sequence of image to be displayed in slideshow</inlineHelpText>
    <label>Image Sequence</label>
    <required>true</required>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>1</fullName>
                <default>true</default>
                <label>1</label>
            </value>
            <value>
                <fullName>2</fullName>
            </value>
            <value>
                <fullName>3</fullName>
            </value>
            <value>
                <fullName>4</fullName>
            </value>
            <value>
                <fullName>5</fullName>
            </value>
            <value>
                <fullName>6</fullName>
            </value>
            <value>
                <fullName>7</fullName>
            </value>
            <value>
                <fullName>8</fullName>
            </value>
            <value>
                <fullName>9</fullName>
            </value>
            <value>
                <fullName>10</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>