force-app/main/default/objects/phsHomeSlideShow__c/fields/Mobile_Image__c.field-meta.xml
<CustomField>
    <fullName>Mobile_Image__c</fullName>
    <description>This image will be one of the backgrounds of Mobile slideshow depending on sequence in homepage</description>
    <inlineHelpText>This image will be one of the backgrounds of Mobile slideshow depending on sequence in homepage</inlineHelpText>
    <label>Mobile Image</label>
    <length>32768</length>
    <type>Html</type>
</CustomField>